objects/VisitOps__Survey__c.object
<CustomObject>
    <fields>
        <fullName>Test_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Anthem_Can_Deliver_Commitments_After__c</fullName>
        <inlineHelpText>Anthem is able to deliver on its commitments</inlineHelpText>
        <label>Anthem Can Deliver Commitments After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Anthem_Can_Deliver_Commitments_Before__c</fullName>
        <inlineHelpText>Anthem is able to deliver on its commitments</inlineHelpText>
        <label>Anthem Can Deliver Commitments Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Anthem_Clear_Digital_Strategy_After__c</fullName>
        <inlineHelpText>Anthem has a clear digital strategy</inlineHelpText>
        <label>Anthem Clear Digital Strategy After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Anthem_Clear_Digital_Strategy_Before__c</fullName>
        <inlineHelpText>Anthem has a clear digital strategy</inlineHelpText>
        <label>Anthem Clear Digital Strategy Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Anthem_Leverages_Data_After__c</fullName>
        <inlineHelpText>Anthem effectively leverages data to improve our customers&apos; experiences</inlineHelpText>
        <label>Anthem Leverages Data After</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Anthem_Leverages_Data_Before__c</fullName>
        <inlineHelpText>Anthem effectively leverages data to improve our customers&apos; experiences</inlineHelpText>
        <label>Anthem Leverages Data Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Anthem_Personalizes_Experiences_After__c</fullName>
        <inlineHelpText>Anthem delivers a personalized experience</inlineHelpText>
        <label>Anthem Personalizes Experiences After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Anthem_Personalizes_Experiences_Befor__c</fullName>
        <inlineHelpText>Anthem delivers a personalized experience</inlineHelpText>
        <label>Anthem Personalizes Experiences Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_CEC_Changed_Perception_of_Anthem__c</fullName>
        <inlineHelpText>How did your time at the Client Experience Center change your perception of Anthem?</inlineHelpText>
        <label>CEC Changed Perception of Anthem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improved</fullName>
                </value>
                <value>
                    <fullName>Stayed the Same</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_CEC_Visit_Improvements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>How could we have improved your Client Experience Center visit?</inlineHelpText>
        <label>CEC Visit Improvements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_CEC_is_Valuable_Tool__c</fullName>
        <inlineHelpText>The Client Experience Center is a valuable tool to help win and retain business</inlineHelpText>
        <label>CEC is Valuable Tool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Clients_Perception_of_Anthem_Improved__c</fullName>
        <inlineHelpText>My client&apos;s perception of Anthem improved after visiting the Client Experience Center</inlineHelpText>
        <label>Client&apos;s Perception of Anthem Improved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Extent_Owner_Agrees_or_Disagrees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To what extent do you agree or disagree with the following statements?</inlineHelpText>
        <label>Extent Owner Agrees or Disagrees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Extent_you_Agree_or_Disagree_After__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Based on your visit, to what extent do you agree or disagree with the following statements?</inlineHelpText>
        <label>Extent you Agree or Disagree After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Extent_you_Agree_or_Disagree_Before__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To what extent do you agree or disagree with the following statements?</inlineHelpText>
        <label>Extent you Agree or Disagree Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Goals_for_Visiting_CEC_Accomplished__c</fullName>
        <inlineHelpText>My goals for visiting the Client Experience Center were accomplished</inlineHelpText>
        <label>Goals for Visiting CEC Accomplished</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Overall_Visit_Experience_Presenter__c</fullName>
        <inlineHelpText>Overall Visit Experience</inlineHelpText>
        <label>Overall Visit Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VO_Reason_Perception_Changed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please explain your answer above in greater detail.</inlineHelpText>
        <label>Reason Perception Changed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Specific_topics_to_be_covered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Are there specific topics you would like to see covered during your visit?</inlineHelpText>
        <label>Specific topics to be covered</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VO_Understanding_of_Anthem_Solutions_Aft__c</fullName>
        <inlineHelpText>I have a clear understanding of Anthem&apos;s service solutions</inlineHelpText>
        <label>Understanding of Anthem Solutions After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VO_Understanding_of_Anthem_Solutions_Bef__c</fullName>
        <inlineHelpText>I have a clear understanding of Anthem&apos;s service solutions</inlineHelpText>
        <label>Understanding of Anthem Solutions Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__About_company_in_one_word_post__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you could describe VisitOps in one word, what would it be?</inlineHelpText>
        <label>About company After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__About_the_Company_Pre__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you could describe VisitOps in one word, what would it be?</inlineHelpText>
        <label>About the Company Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Accomplishment_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>You told us that this was the most important thing you needed to accomplish during the visit. To what degree was it accomplished?</inlineHelpText>
        <label>Accomplishment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Accomplishment_Owner_post__c</fullName>
        <inlineHelpText>You told us this was the most important thing you needed to accomplish during the visit. To what degree was it accomplished?</inlineHelpText>
        <label>Degree of Accomplishment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completely Accomplished</fullName>
                </value>
                <value>
                    <fullName>Mostly Accomplished</fullName>
                </value>
                <value>
                    <fullName>Partially Accomplished</fullName>
                </value>
                <value>
                    <fullName>Not Really Accomplished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Accomplishment_Owner_pre__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What is the most important thing you need to accomplish during this visit?</inlineHelpText>
        <label>Things To Accomplish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Accomplishment__c</fullName>
        <inlineHelpText>You told us that this was the most important thing you needed to accomplish during the visit.  To what degree was it accomplished?</inlineHelpText>
        <label>Accomplishment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolutely</fullName>
                </value>
                <value>
                    <fullName>Mostly</fullName>
                </value>
                <value>
                    <fullName>Partially</fullName>
                </value>
                <value>
                    <fullName>Not really</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Accomplishment_comments_Owner_post__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>You told us this was the most important thing you needed to accomplish during the visit. To what degree was it accomplished?</inlineHelpText>
        <label>Accomplishment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Additional_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is there anything else you’d like to tell us about your visit?</inlineHelpText>
        <label>Additional Details</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_and_Time_LocationFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Arrival_Date_and_Time_LocationFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Arrival Date and Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>VisitOps__Attendee__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Biggest_fear__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What is your biggest fear about this visit?</inlineHelpText>
        <label>Biggest Fear</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Biggest_fear_pick__c</fullName>
        <inlineHelpText>You told us this was the biggest fear you had prior to the visit. To what degree was that fear addressed during the visit.</inlineHelpText>
        <label>Degree Biggest Fear Addressed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Totally Eliminated My Fear</fullName>
                </value>
                <value>
                    <fullName>Significantly Reduced My Fear</fullName>
                </value>
                <value>
                    <fullName>Helped Reduce My Fear</fullName>
                </value>
                <value>
                    <fullName>There Was Nothing You Could Have Done To Reduce My Fear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Biggest_fear_post__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>You told us this was the biggest fear you had prior to the visit. To what degree was that fear addressed during the visit.</inlineHelpText>
        <label>Biggest fear</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Communication_of_Session_Objectives__c</fullName>
        <inlineHelpText>Communication of Session Objectives</inlineHelpText>
        <label>Communication of Session Objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__ConfidenceAfter__c</fullName>
        <description>This field is used in Customer Confidence Report to display the level of Confidence the customer has after the Visit.</description>
        <formula>VisitOps__ConfidenceLevelAfter__c / 10</formula>
        <label>Confidence After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VisitOps__ConfidenceBefore__c</fullName>
        <description>This field is used in Customer Confidence Report to display the level of Confidence the customer has before the Visit.</description>
        <formula>VisitOps__ConfidenceLevelBefore__c / 10</formula>
        <label>Confidence Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VisitOps__ConfidenceLevelAfter__c</fullName>
        <inlineHelpText>What is your confidence level that VisitOps can meet your business needs?</inlineHelpText>
        <label>Confidence Level After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__ConfidenceLevelBefore__c</fullName>
        <inlineHelpText>What is your confidence level that VisitOps can meet your business needs?</inlineHelpText>
        <label>Confidence Level Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Confidence_Level_Pre__c</fullName>
        <description>This field is no longer used because Managed Package doesn&apos;t allow changing datatypes and this field will create conflicts while deploying in Managed Package.</description>
        <inlineHelpText>What is your confidence level that VisitOps can meet your business needs?</inlineHelpText>
        <label>Confidence Level Before</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VisitOps__Confidence_Level_post__c</fullName>
        <description>This field is no longer used because Managed Package doesn&apos;t allow changing datatypes and this field will create conflicts while deploying in Managed Package.</description>
        <inlineHelpText>What is your confidence level that VisitOps can meet your business needs?</inlineHelpText>
        <label>Confidence Level After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VisitOps__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will from now on hold the contact lookup value present in Attendee, if an attendee submits a survey(customer, decision).</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__CountConfidenceAfterVisit__c</fullName>
        <description>This field indicates whether the Customer has rated Confidence after Visit</description>
        <formula>IF( ISBLANK(  VisitOps__ConfidenceLevelAfter__c ) , 0, 1)</formula>
        <label>Count Confidence After Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__CountConfidenceBeforeVisit__c</fullName>
        <description>This field indicates whether the Customer has rated Confidence before Visit</description>
        <formula>IF( ISBLANK( VisitOps__ConfidenceLevelBefore__c ) , 0, 1)</formula>
        <label>Count Confidence Before Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__DecisionSurvey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DecisionSurvey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_Making_Time__c</fullName>
        <inlineHelpText>Did the visit shorten or lengthen the time you anticipated it would take to make a decision?</inlineHelpText>
        <label>Decision Making Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shortened</fullName>
                </value>
                <value>
                    <fullName>Lengthened</fullName>
                </value>
                <value>
                    <fullName>Neither Shortened or Lengthened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_Survey_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Survey Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_to_do_business__c</fullName>
        <inlineHelpText>Did your visit result in a decision to do business with us?</inlineHelpText>
        <label>Visit Resulted in Business Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable To My Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_and_Time_LocationFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Departure_Date_and_Time_LocationFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Departure Date and Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Facilitation_of_Visit__c</fullName>
        <inlineHelpText>Facilitation of Visit</inlineHelpText>
        <label>Facilitation of Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Impact_of_visit__c</fullName>
        <inlineHelpText>What impact did the visit have on your relationship with us?</inlineHelpText>
        <label>Impact of visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strengthened Our Relationship</fullName>
                </value>
                <value>
                    <fullName>No Impact On Our Relationship</fullName>
                </value>
                <value>
                    <fullName>Weakened Our Relationship</fullName>
                </value>
                <value>
                    <fullName>Not Applicable To My Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Impact_on_buying_decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the visit shortened or lengthened your decision-making time, by what percentage? And comments</inlineHelpText>
        <label>Impact on buying decision Comments</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Impact_on_buying_decision__c</fullName>
        <inlineHelpText>What impact did the visit have on your buying decision?</inlineHelpText>
        <label>Impact on buying decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>It was the deciding factor</fullName>
                </value>
                <value>
                    <fullName>It was highly influential</fullName>
                </value>
                <value>
                    <fullName>It contributed to the decision</fullName>
                </value>
                <value>
                    <fullName>It impacted the decision very little</fullName>
                </value>
                <value>
                    <fullName>It did not impact the decision at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Impact_on_buying_decision_by_Percentage__c</fullName>
        <inlineHelpText>If the visit shortened or lengthened your decision-making time, by what percentage?</inlineHelpText>
        <label>Impact on buying decision by Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Impact_on_buying_decision_for_visit__c</fullName>
        <inlineHelpText>Did the visit shorten or lengthen the time you anticipated it would take to make a decision?</inlineHelpText>
        <label>Impact on buying decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shortened</fullName>
                </value>
                <value>
                    <fullName>Lengthened</fullName>
                </value>
                <value>
                    <fullName>Neither Shortened or Lengthened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__ImpactofVisitFormula__c</fullName>
        <formula>CASE(VisitOps__Impact_of_visit__c , &apos;Strengthened Our Relationship&apos;, &apos;Strengthened Our Relationship&apos;, &apos;No Impact On Our Relationship&apos;, &apos;No Impact On Our Relationship&apos;,&apos;Weakened Our Relationship&apos;,&apos;Weakened Our Relationship&apos;,&apos;Not Applicable To My Visit&apos;,&apos;Not Applicable To My Visit&apos;,&apos;No Response&apos;)</formula>
        <label>Impact of Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Incremental_Revenue_from_Visits__c</fullName>
        <formula>VisitOps__Visit_Bundle__r.VisitOps__Opportunity__r.Amount  * VALUE( LEFT(TEXT(VisitOps__Incremental_business_by_Percentage__c) , 2) ) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incremental Revenue from Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Incremental_business_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you awarded us any additional business, please estimate by what percent your purchase increased? And comments</inlineHelpText>
        <label>Incremental business Comments</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>